# AutoRegistBase

./: CMakeLists.txt  README.md
include/: AutoRegistBase.h  ClassFactory.h  Singleton.h
src/: ClassFactory.cpp
